@@ -9,6 +9,7 @@ DIST README-3.13.5.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad
 DIST README-3.13.6.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
 DIST README-3.13.7.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
 DIST README-3.13.8.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
+DIST README-3.13.9.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
 DIST aufs-sources-3.12.x_p20140310.tar.xz 152176 SHA256 fb2c3547cf908e968d1c439be47706bdf05d3203f3e6d4fadec84878dca4efe9 SHA512 96415f28559b1e6fbcf8bf777294b727c0613b685b0674503350af044e9c51ab0246f28da8eb2768549ff1109a911509b5bc03b486365c42058248346ee1437d WHIRLPOOL 3b4d9d14f78a63a3a7b6c2c4bca730667771f1dee40a37bb7b433c93cdd5e9514765d317ff200a973f29bb83290447b1e9bb8fd497e070ac11b7d81730a9fcdc
 DIST aufs-sources-3.13_p20140303.tar.xz 152112 SHA256 f5985f50cde210a99dae027cd4f4e73daa5755b2e916fa8b1e987f7229971a23 SHA512 d1b1c144eeb2b9ae57a16b57409f69591ab1e9cb1db33dba9548998c578cde3a18d711ee272c049ec88b8a6611c5a7e0050dca027dc6be9365540fa6f7a0be22 WHIRLPOOL 93cefd96908f4def5936eab0018ba7816994a9f0a3267a0c17be46ef53299904f7d4288c86a132e4d16e06f3911fd12d034d0bd9dda72c72af0e26f37a14bd18
 DIST aufs-sources-3.13_p20140310.tar.xz 152112 SHA256 f5985f50cde210a99dae027cd4f4e73daa5755b2e916fa8b1e987f7229971a23 SHA512 d1b1c144eeb2b9ae57a16b57409f69591ab1e9cb1db33dba9548998c578cde3a18d711ee272c049ec88b8a6611c5a7e0050dca027dc6be9365540fa6f7a0be22 WHIRLPOOL 93cefd96908f4def5936eab0018ba7816994a9f0a3267a0c17be46ef53299904f7d4288c86a132e4d16e06f3911fd12d034d0bd9dda72c72af0e26f37a14bd18
@@ -22,6 +23,8 @@ DIST genpatches-3.13-10.base.tar.xz 235084 SHA256 917269ea4b97798d1c5c412dc2d31a
 DIST genpatches-3.13-10.extras.tar.xz 18184 SHA256 701e71e53b4a96907c2d9258a86c4abe49caf94430e4a0706ccb241ade3d8715 SHA512 a3f224a85dd0ddf03d2ff734388b592de0320653664c181923d243b1f439ef7ee9278ab835425ddf6574901bfe5605e9ca71c53184f1bc9f2b971331e6015275 WHIRLPOOL 5881bd3a9dff0e0a6aa54895701bcaf688900da77f075d99c27bc9ddd45b6ba3fff41becefa121698e2b01b15bce83897c68266a1facf9222e1c8436a17f1ed3
 DIST genpatches-3.13-11.base.tar.xz 253240 SHA256 d35db3455fc0d01efc9ada22b955c42d0ae724bbf23d109df990ad76bfb545b3 SHA512 a8b063573169a222cdd5771822748372c808e9f88924b5d30746ebcfba588f23edffc6717b0fb4a2bb26346e9c9d9dca761d135090ba40a266ca8a6203ca645a WHIRLPOOL b2f1d18e3e2e0a97c9f7a80327efb4d522d62ae6b5dd934cb62ba9b8a0653008fa75d109aaef3e6825a986901c3d82e73c8cd448121901642aa1e01cd5e0aeed
 DIST genpatches-3.13-11.extras.tar.xz 18188 SHA256 1769bc3ca09646c637b277c9af215a5eadb0ba3988d0a86ac719578563d43fba SHA512 a635c6b7cc04ce41afb5f8b2efc263a2e0d2d78dc5aafb8f3e4fa35ae7ed55ccec06cd63a12b71f7818477d4a1b812a06b254ba2b2eb4b0a3185356319532e54 WHIRLPOOL e7fb7279f802a6b4b173d10a4a2677490bee7f18a8d385af7247bf5db0d909da8374980dcef15f981cc52bec51fa061d9b2dfd5678b9bcb8761160ab1897c30d
+DIST genpatches-3.13-12.base.tar.xz 262440 SHA256 8ed8c85ebfac182d0e99f89042377e3820d272f0b2f58755565fb687b84eafb0 SHA512 43ac18b049912a94375c50530960b3a4000119358777799fe0861b94e3b4dcc79adf6f69298f60ebfc68bfc5400c4f2f7e5373eae63332f0b9683b1c4b01f904 WHIRLPOOL 93a641df30b4ac42327ea477c3719d6048f17bca8bf976be8f60771732bea5dd852cc6ca91103f639a74fbd8875c4ef09f249b12d37db002cced63cb88cc59a7
+DIST genpatches-3.13-12.extras.tar.xz 18252 SHA256 6e551ddcdae045990264eeca3868a34bf9fa3a2be9b6b973037f8f2fced11a21 SHA512 bae47b3ec6ff97d616fbfdc04616aa03097b4c6345648edee7f912022a9d5ccac486d181da3a5c51a8cabc712c126eca6a32e384bc3fd25f096baf98113de62b WHIRLPOOL 4944fcd6b3192606f099ef66d5299a6eab1bc639797ce3e08ac1b784a0f31021e567d44d8c150dc60beaa9d0fa8cf13ce7d3e793e7f66b4ec38d3560a484fb84
 DIST genpatches-3.13-8.base.tar.xz 138020 SHA256 f3e048a313ab55bcadb5a44036c6421d316102e6aee15c15dc13f1ba8d516fa2 SHA512 bfb9d7b221a2b0d302f5f8453784886ce553b0e8e8a2faf29e3b1f95611c745dcfce4293d5e768e878f2b88aed3866a9f38545b8551b9db3fca18d39a966c1a5 WHIRLPOOL a8bb17a0815bb7a369ae371ce1939bf2d38d9d2324653e77c16ded0d31f8891824fdb08879c2315d99ee55d6bcb130a3b1589c79f5431945042433c8a0c57d69
 DIST genpatches-3.13-8.extras.tar.xz 18168 SHA256 a00603ac5ca73f37261c2dca4f8c396a9d2b988fd326c793d9016fe8355e790a SHA512 25fd010838a4de56a513dbb21cb1ffd3c99566cdfd55011f1fe25811d1b2c882c62be6d6904115f1f1aa894bc917a61fdf5009c119e2a2614d39d3c258382453 WHIRLPOOL 7d245c855d6ac0b501317d33924fdd8c92ac2dd5b13ea0377fd169e01df27442413dd4e648d7f71e96a1e071f5788553dfcc7db3f12ea9ecf5efbbd3614eaaeb
 DIST genpatches-3.13-9.base.tar.xz 193284 SHA256 f507ccb65f1c2cbeee86e4e5949f62db924f5cd9cd35b3962e478802c2279995 SHA512 49540e2c4aae2641a14c27c88888a52358298711d682865ae39128f1d5935325c0bf901cb58ad8d5477940efaee87e5bbd4d758ff4daca88fc23765d8ee176a3 WHIRLPOOL d30fe74184a549493da4fd2ee1b0bd7d75e5439c8387d7d81bc9319926be8706db3e177d5e91b073c988c49a7ff2d2be63854a1e7b43472675844c512daddbc7
