@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.13.9 (05 Apr 2014)
+
+  05 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.9.ebuild:
+  Bump to latest linux and genpatch release
+
 *lh-sources-3.13.8 (01 Apr 2014)
 
   01 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.8.ebuild:
